--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -78,8 +78,8 @@ msgid "could not update aur cache"
 msgstr "未能更新 AUR 缓存"
 
 #: src/config.rs:174
-msgid "invalid value '{:val}' for key '{:key}', expected: {:exp}"
-msgstr "'{:val}' 不是键 '{:key}' 的合法值，期望值为: {:exp}"
+msgid "invalid value '{val}' for key '{key}', expected: {exp}"
+msgstr "'{val}' 不是键 '{key}' 的合法值，期望值为: {exp}"
 
 #: src/config.rs:474
 msgid "failed to find cache directory"
@@ -134,8 +134,8 @@ msgid "option '{}' does not take a value"
 msgstr "选项 '{}' 不接受值"
 
 #: src/config.rs:947 src/install.rs:1796
-msgid "There are {:n} providers available for {:pkg}:"
-msgstr "软件包 {:pkg} 有 {:n} 个提供者:"
+msgid "There are {n} providers available for {pkg}:"
+msgstr "软件包 {pkg} 有 {n} 个提供者:"
 
 #: src/config.rs:961 src/info.rs:56 src/info.rs:95 src/install.rs:1755
 #: src/install.rs:1804
@@ -211,8 +211,8 @@ msgid "does not contain PKGBUILD: skipping"
 msgstr "不包含 PKGBUILD: 正在跳过"
 
 #: src/download.rs:294
-msgid " ({:total>padding$}/{:total}) downloading: {:pkg}"
-msgstr " ({:total>padding$}/{:total}) 正在下载 {:pkg}"
+msgid " ({total>padding$}/{total}) downloading: {pkg}"
+msgstr " ({total>padding$}/{total}) 正在下载 {pkg}"
 
 #: src/download.rs:317
 msgid "Downloading PKGBUILDs..."
@@ -454,10 +454,10 @@ msgstr "无法找到所有需要的软件包:"
 #: src/install.rs:982
 msgid ""
 "\n"
-"    {:missing} (wanted by: {:stack})"
+"    {missing} (wanted by: {stack})"
 msgstr ""
 "\n"
-"    {:missing} (被 {:stack} 需要)"
+"    {missing} (被 {stack} 需要)"
 
 #: src/install.rs:996 src/install.rs:1941
 msgid "{}-{} is up to date -- skipping"
@@ -524,8 +524,8 @@ msgid "adding {} to the install list"
 msgstr "正在将 {} 加入安装列表"
 
 #: src/install.rs:1532
-msgid "could not find package '{:pkg}' in package list for '{:base}'"
-msgstr "未能在列表 '{:base}' 中找到软件包 '{:pkg}'"
+msgid "could not find package '{pkg}' in package list for '{base}'"
+msgstr "未能在列表 '{base}' 中找到软件包 '{pkg}'"
 
 #: src/install.rs:1670
 msgid "can't find package name in packagelist: {}"
@@ -554,8 +554,8 @@ msgid "keys need to be imported:)"
 msgstr "需要导入公钥:)"
 
 #: src/keys.rs:52
-msgid "     {:key} wanted by: {:base}"
-msgstr "     {:key} 被 {:base} 需要"
+msgid "     {key} wanted by: {base}"
+msgstr "     {key} 被 {base} 需要"
 
 #: src/news.rs:57
 msgid "No Date "
@@ -654,8 +654,8 @@ msgid "warning:"
 msgstr "警告:"
 
 #: src/upgrade.rs:181
-msgid "{:pkg}: ignoring package upgrade ({:old} => {:new})"
-msgstr "{:pkg}: 正在忽略更新 ({:old} => {:new})"
+msgid "{pkg}: ignoring package upgrade ({old} => {new})"
+msgstr "{pkg}: 正在忽略更新 ({old} => {new})"
 
 #: src/upgrade.rs:334
 msgid "Packages to exclude (eg: 1 2 3, 1-3):"
@@ -694,8 +694,8 @@ msgid "invalid number: {}"
 msgstr "不合法的数字: {}"
 
 #: src/util.rs:326
-msgid "invalid value: {:n} is not between 1 and {:max}"
-msgstr "不合法的值: {:n} 不在 1 和 {:max} 之间"
+msgid "invalid value: {n} is not between 1 and {max}"
+msgstr "不合法的值: {n} 不在 1 和 {max} 之间"
 
 #: src/lib.rs:153
 msgid "can not use chroot builds: devtools is not installed"
