--- a/po/ja.po
+++ b/po/ja.po
@@ -79,8 +79,8 @@ msgid "could not update aur cache"
 msgstr "aur キャッシュを更新できません"
 
 #: src/config.rs:174
-msgid "invalid value '{:val}' for key '{:key}', expected: {:exp}"
-msgstr "キー '{:key} に対する不正な値 '{:val}'、期待された値: {:exp}"
+msgid "invalid value '{val}' for key '{key}', expected: {exp}"
+msgstr "キー '{key} に対する不正な値 '{val}'、期待された値: {exp}"
 
 #: src/config.rs:474
 msgid "failed to find cache directory"
@@ -135,8 +135,8 @@ msgid "option '{}' does not take a value"
 msgstr "オプション '{}' は値をとりません"
 
 #: src/config.rs:947 src/install.rs:1796
-msgid "There are {:n} providers available for {:pkg}:"
-msgstr "{:n} 個のパッケージが {:pkg} を提供しています:"
+msgid "There are {n} providers available for {pkg}:"
+msgstr "{n} 個のパッケージが {pkg} を提供しています:"
 
 #: src/config.rs:961 src/info.rs:56 src/info.rs:95 src/install.rs:1755
 #: src/install.rs:1804
@@ -212,8 +212,8 @@ msgid "does not contain PKGBUILD: skipping"
 msgstr "PKGBUILD が含まれていません: スキップ"
 
 #: src/download.rs:294
-msgid " ({:total>padding$}/{:total}) downloading: {:pkg}"
-msgstr " ({:total>padding$}/{:total}) {:pkg} をダウンロードしています"
+msgid " ({total>padding$}/{total}) downloading: {pkg}"
+msgstr " ({total>padding$}/{total}) {pkg} をダウンロードしています"
 
 #: src/download.rs:317
 msgid "Downloading PKGBUILDs..."
@@ -455,10 +455,10 @@ msgstr "必要なパッケージを全て見つけることができません:"
 #: src/install.rs:982
 msgid ""
 "\n"
-"    {:missing} (wanted by: {:stack})"
+"    {missing} (wanted by: {stack})"
 msgstr ""
 "\n"
-"    {:missing} (必要としているパッケージ: {:stack})"
+"    {missing} (必要としているパッケージ: {stack})"
 
 #: src/install.rs:996 src/install.rs:1941
 msgid "{}-{} is up to date -- skipping"
@@ -525,8 +525,8 @@ msgid "adding {} to the install list"
 msgstr "インストールリストに {} を追加しています"
 
 #: src/install.rs:1532
-msgid "could not find package '{:pkg}' in package list for '{:base}'"
-msgstr "'{:base}' のパッケージリストにパッケージ '{:pkg}' が見つかりませんでした"
+msgid "could not find package '{pkg}' in package list for '{base}'"
+msgstr "'{base}' のパッケージリストにパッケージ '{pkg}' が見つかりませんでした"
 
 #: src/install.rs:1670
 msgid "can't find package name in packagelist: {}"
@@ -555,8 +555,8 @@ msgid "keys need to be imported:)"
 msgstr "キーはインポートされる必要があります:)"
 
 #: src/keys.rs:52
-msgid "     {:key} wanted by: {:base}"
-msgstr "     {:key} は{:base} に必要とされています"
+msgid "     {key} wanted by: {base}"
+msgstr "     {key} は{base} に必要とされています"
 
 #: src/news.rs:57
 msgid "No Date "
@@ -655,8 +655,8 @@ msgid "warning:"
 msgstr "警告:"
 
 #: src/upgrade.rs:181
-msgid "{:pkg}: ignoring package upgrade ({:old} => {:new})"
-msgstr "{:pkg}: パッケージのアップデートを無視  ({:old} => {:new})"
+msgid "{pkg}: ignoring package upgrade ({old} => {new})"
+msgstr "{pkg}: パッケージのアップデートを無視  ({old} => {new})"
 
 #: src/upgrade.rs:334
 msgid "Packages to exclude (eg: 1 2 3, 1-3):"
@@ -695,8 +695,8 @@ msgid "invalid number: {}"
 msgstr "不正な数字: {}"
 
 #: src/util.rs:326
-msgid "invalid value: {:n} is not between 1 and {:max}"
-msgstr "不正な値: {:n} は 1 から {:max} の間にありません"
+msgid "invalid value: {n} is not between 1 and {max}"
+msgstr "不正な値: {n} は 1 から {max} の間にありません"
 
 #: src/lib.rs:153
 msgid "can not use chroot builds: devtools is not installed"
