--- a/po/tr.po
+++ b/po/tr.po
@@ -78,8 +78,8 @@ msgid "could not update aur cache"
 msgstr "aur önbelleği güncellenemedi"
 
 #: src/config.rs:174
-msgid "invalid value '{:val}' for key '{:key}', expected: {:exp}"
-msgstr "'{:key}' anahtarı için geçersiz değer '{:val}', beklenen: {:exp}"
+msgid "invalid value '{val}' for key '{key}', expected: {exp}"
+msgstr "'{key}' anahtarı için geçersiz değer '{val}', beklenen: {exp}"
 
 #: src/config.rs:474
 msgid "failed to find cache directory"
@@ -134,8 +134,8 @@ msgid "option '{}' does not take a value"
 msgstr "'{}' seçeneği bir değer almaz"
 
 #: src/config.rs:947 src/install.rs:1796
-msgid "There are {:n} providers available for {:pkg}:"
-msgstr "{:pkg} için {:n} adet sağlayıcı bulunmaktadır:"
+msgid "There are {n} providers available for {pkg}:"
+msgstr "{pkg} için {n} adet sağlayıcı bulunmaktadır:"
 
 #: src/config.rs:961 src/info.rs:56 src/info.rs:95 src/install.rs:1755
 #: src/install.rs:1804
@@ -211,8 +211,8 @@ msgid "does not contain PKGBUILD: skipping"
 msgstr "pkgbuild içermiyor: es geçiliyor"
 
 #: src/download.rs:294
-msgid " ({:total>padding$}/{:total}) downloading: {:pkg}"
-msgstr " ({:total>padding$}/{:total}) indiliriliyor: {:pkg}"
+msgid " ({total>padding$}/{total}) downloading: {pkg}"
+msgstr " ({total>padding$}/{total}) indiliriliyor: {pkg}"
 
 #: src/download.rs:317
 msgid "Downloading PKGBUILDs..."
@@ -454,10 +454,10 @@ msgstr "tüm gerekli paketler bulunamadı:"
 #: src/install.rs:982
 msgid ""
 "\n"
-"    {:missing} (wanted by: {:stack})"
+"    {missing} (wanted by: {stack})"
 msgstr ""
 "\n"
-"  {:missing} ({:stack}: tarafından arandı)"
+"  {missing} ({stack}: tarafından arandı)"
 
 #: src/install.rs:996 src/install.rs:1941
 msgid "{}-{} is up to date -- skipping"
@@ -524,8 +524,8 @@ msgid "adding {} to the install list"
 msgstr "{} yükleme listesine ekleniyor"
 
 #: src/install.rs:1532
-msgid "could not find package '{:pkg}' in package list for '{:base}'"
-msgstr "'{:pkg}' paket '{:base}' paket listesinde bulunamadı"
+msgid "could not find package '{pkg}' in package list for '{base}'"
+msgstr "'{pkg}' paket '{base}' paket listesinde bulunamadı"
 
 #: src/install.rs:1670
 msgid "can't find package name in packagelist: {}"
@@ -554,8 +554,8 @@ msgid "keys need to be imported:)"
 msgstr "anahtar içe aktarılmalıdır:)"
 
 #: src/keys.rs:52
-msgid "     {:key} wanted by: {:base}"
-msgstr "    {:key}: {:base} tarafından istendi"
+msgid "     {key} wanted by: {base}"
+msgstr "    {key}: {base} tarafından istendi"
 
 #: src/news.rs:57
 msgid "No Date "
@@ -654,8 +654,8 @@ msgid "warning:"
 msgstr "uyarı:"
 
 #: src/upgrade.rs:181
-msgid "{:pkg}: ignoring package upgrade ({:old} => {:new})"
-msgstr "{:pkg} paket yükseltmesini göz ardı ediyor ({:old} => {:new})"
+msgid "{pkg}: ignoring package upgrade ({old} => {new})"
+msgstr "{pkg} paket yükseltmesini göz ardı ediyor ({old} => {new})"
 
 #: src/upgrade.rs:334
 msgid "Packages to exclude (eg: 1 2 3, 1-3):"
@@ -694,8 +694,8 @@ msgid "invalid number: {}"
 msgstr "geçersiz numara: {}"
 
 #: src/util.rs:326
-msgid "invalid value: {:n} is not between 1 and {:max}"
-msgstr "geçersiz değer: {:n} 1 ile {:max} arasında değil"
+msgid "invalid value: {n} is not between 1 and {max}"
+msgstr "geçersiz değer: {n} 1 ile {max} arasında değil"
 
 #: src/lib.rs:153
 msgid "can not use chroot builds: devtools is not installed"
