--- a/po/ro.po
+++ b/po/ro.po
@@ -25,7 +25,7 @@ msgstr "Doriți să stergeți din cache toate celelalte pachete AUR?"
 
 #: src/clean.rs:40
 msgid "Clone Directory: {}"
-msgstr "Clone Directory: {}"
+msgstr "Director Clone: {}"
 
 #: src/clean.rs:46
 msgid ""
@@ -33,7 +33,7 @@ msgid ""
 "Diff Directory: {}"
 msgstr ""
 "\n"
-"Diff Directory: {}"
+"Director Diff: {}"
 
 #: src/clean.rs:48
 msgid "Do you want to remove all saved diffs?"
